fixed some alignments on text and headings
- headers should now align more or less in same area.
- Pasted in Stuart’s code for hamburger menu but still kinda wonky.
- have figured out that previous hamburger code—the menu was showing up
in a tiny box under the menu. even weirder
- currently just trying to get the menu centered under the logo but
struggling.

--- a/css/main.css
+++ b/css/main.css
@@ -39,13 +39,15 @@ NAVIGATION
 .mobile {
 	display: none;
 }
+
+
 nav ul {
 	display: flex;
 	justify-content: space-around;
 }
 
 #logo {
-
+max-width: 520px;
 }
 
 
@@ -60,12 +62,14 @@ nav ul {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-size: 1em;
-	position: fixed, top:0; width:100%;
+	position: fixed, 
+	top:0; 
+	width:100%;
 }
 
 a {
 	text-decoration: none;
-		color: black;
+	color: black;
 }
 
 
@@ -183,7 +187,8 @@ h1 {
 	font-size: 1.5em;
 	font-weight: 300;
 	font-family: 'Lato', sans-serif;
-	padding: 20px 0;
+	padding: 20px 0 0 0;
+	text-align: left;
 }
 
 
@@ -203,8 +208,7 @@ SOUNDCLOUD
 
 .soundcloud {
 	justify-content: center;
-	margin: 0 50px;
-
+	margin: 0px 20% 10px;
 }
 
 
@@ -222,11 +226,10 @@ BANDCAMP
 }
 
 .bandcamp {
-	margin-top: 10px;
 	background-color: #f2f2f2;
 	display: flex;
 	flex-direction: column;
-	margin: 20px 20%;
+	margin: 30px 20% 10px;
 }	
 
  #gallery {
@@ -243,6 +246,22 @@ BANDCAMP
 
 
 
+
+/*************************************
+VIDEO & EVENTS
+*************************************/
+
+#videos, #events  {
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 0 20px;
+	text-align: auto;
+}
+
+
+
+
 /*************************************
 PAGE ABOUT
 *************************************/
@@ -250,37 +269,18 @@ PAGE ABOUT
 
 #about {
 margin: auto;
+text-align: center;
 }
 
 
 #bio{
-	padding: 0px 20% ;
+max-width: 720px;
 }
 
 #biopic {
- margin: auto;
- padding: 0px 20%;
  max-width: 720px;
- margin-top: 5px;
+ height: auto;
+ padding: 20px 0 0 0;
 }
 
 
-/*************************************
-VIDEO & EVENTS
-*************************************/
-
-#videos {
-	display:flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 20px;
-	text-align: auto;
-}
-
-#events {
-	display:flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 20px;
-	text-align: auto;
-}
